sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:14: error: value b is not a member of Unit
possible cause: maybe a semicolon is missing before `value b'?
     }b=b+1
      ^